--- a/css/home.css
+++ b/css/home.css
@@ -6,15 +6,13 @@
     flex-direction: column;
     align-items: center;
     gap: var(--layout-gap-size);
-    max-width: 1100px;
+    max-width: 1280px;
 
     .introduction {
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
-        /*gap: var(--layout-gap-size);*/
         align-items: center;
-        /*min-height: calc(100vh - var(--header-height) - var(--layout-gap-size));*/
         width: 100%;
 
         article {
@@ -25,16 +23,18 @@
             'skills skills';
             grid-template-columns: 1fr 4fr;
             grid-template-rows: 0.25fr 1fr 0.25fr;
+            gap: var(--main-intro-card-gap-size);
             width: 100%;
 
             .profile-photo {
                 grid-area: photo;
+                justify-self: center;
+                align-self: center;
                 width: 90%;
-                margin: 15px;
-                border-radius: 10px;
-                box-shadow: 2px 2px var(--main-intro-card-shadow-size) var(--main-intro-card-shadow-color);
                 filter: brightness(110%);
+                border-radius: 10px;
                 transition: all 0.3s ease-in-out;
+                box-shadow: 2px 2px var(--main-intro-card-shadow-size) var(--main-intro-card-shadow-color);
 
                 &:hover {
                     transform: scale(1.025);
@@ -46,7 +46,6 @@
                 border-radius: 5px;
                 box-shadow: 2px 2px var(--main-intro-card-shadow-size) var(--main-intro-card-shadow-color);
                 padding: 30px;
-                margin: 15px;
                 transition: all 0.3s ease-in-out;
 
                 &:hover {
@@ -114,7 +113,6 @@
                     transform: scale(1.025);
                 }
 
-                margin: 10px 15px 15px 15px;
                 padding: 20px;
 
                 display: flex;
@@ -181,6 +179,14 @@
                 font-size: 1.5rem;
             }
         }
+    }
+
+    .projects-experiences {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: var(--layout-gap-size);
+        width: 100%;
     }
 }
 
